--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         </div>
                     </li>
                     <li class="dropdown"><a href="#" class="dropbtn"><b>Kontak</b></a></li>
+                    <li class="dropdown ppdb-mobile"><a href="#" class="dropbtn"><b>PPDB</b></a></li>
                     <li><button class="button button-header dropbtn">PPDB</button></li>
                 </ul>
             </nav>
@@ -101,13 +102,13 @@
     </div>
     <div class="row section-mid ornament-up">
         <div>
-            <h2>Selamat datang di SMK Sains Pertiwi</h2>
+            <h2 class="selamat">Selamat datang di SMK Sains Pertiwi</h2>
             <p>SMK unggulan dengan Program Pendidikan Kejuruan yang menghasilkan lulusan bersertifikat internasional.
             </p>
         </div>
     </div>
     <div class="row row-spaced section-light">
-        <div>
+        <div style="flex-basis: 40%;">
             <h2 class="underlined head2" style="text-align:left">Kegiatan</h2>
             <ul style="text-align:left">
                 <li><b>1 Januari 2022</b> : Libur Umum (Tahun Baru Masehi 2022)</li>
@@ -120,9 +121,9 @@
                 <li><a href="#"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
-        <div>
+        <div style="flex-basis: 40%;">
             <h2 class="underlined head2" style="text-align:left">Berita</h2>
-            <ul style="text-align:left; list-style-type: circle; padding-left: 10px;">
+            <ul style="text-align:left; list-style-type: circle; padding-left: 15px;">
                 <li><a href="#">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
                 <li><a href="#">Kunjungan SMKN 2 Jambi</a></li>
                 <li><a href="#">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a>
@@ -133,7 +134,7 @@
                 <li><a href="#">Kunjungan SMKN 1 Sorong Papua</a></li>
                 <li><a href="#">“CAREER DAY” SMK Sains Pertiwi</a></li>
                 <br>
-                <li style="list-style-type:none;"><a href="#"><b>Lihat semua berita SMK Sains Pertiwi <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
+                <li style="list-style-type:none; margin-left: -20px;"><a href="#"><b>Lihat semua berita SMK Sains Pertiwi <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
     </div>
@@ -144,13 +145,13 @@
                     src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png" />
             </div>
         </div>
-        <div class="after-bottom block-dark" style="flex-basis: 25%;">
+        <div class="after-bottom block-dark" style="flex-basis: 25%; padding: 30px; margin-bottom: 20px;">
             <h2 class="underlined left-text">Visi</h2>
             <p style="text-align: justify;">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia,
                 berbudaya
                 kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
-        <div class="after-bottom block-dark" style="flex-basis: 35%">
+        <div class="after-bottom block-dark" style="flex-basis: 35%; padding: 30px;">
             <h2 class="underlined left-text">Misi</h2>
             <ul style="padding-left: 15px; list-style-type: disc; text-align: justify;">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
@@ -296,7 +297,7 @@
             <p class="under-header">Lulusan SMK Sains Pertiwi berpeluang untuk bekerja pada perusahaan yang menjadi mitra SMK Sains Pertiwi</p>
         </div>
     </div>
-    <div class="row section-light" style="padding-top: 0px;">
+    <div class="row section-light" style="padding-top: 0px; flex-direction: row;">
         <div style="flex-basis: 10%;"><img src="img/grayscale/1.png" alt="" width="100px"></div>
         <div style="flex-basis: 10%;"><img src="img/grayscale/2.png" alt="" width="100px"></div>
         <div style="flex-basis: 10%;"><img src="img/grayscale/3.png" alt="" width="100px"></div>
@@ -317,14 +318,34 @@
     <div class="row section-light">
         <div>
             <h2 class="underlined head2">Profil Alumni</h2>
+            <div class="row">
+                <div class="block-light" style="flex-basis: 15%;">
+                    <img src="img/v3_0103428.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h4 style="text-align: center;">Lisa Turnip</h4>
+                    <p style="text-align: center; margin-bottom: 0px;">CEO Beauty Box</p>
+                </div>
+                <div class="block-light" style="flex-basis: 15%;">
+                    <img src="img/v3_0049704.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h4 style="text-align: center;">Indra Hadiyanto</h4>
+                    <p style="text-align: center; margin-bottom: 0px;">Software Engineer Macrohard</p>
+                </div>
+                <div class="block-light" style="flex-basis: 15%;">
+                    <img src="img/v3_0467544.png" alt="" width="150px"
+                        style="display: block; margin:auto; margin-bottom: 8px;">
+                    <h4 style="text-align: center;">Adriana Ginanjar</h4>
+                    <p style="text-align: center; margin-bottom: 0px;">Sutradara</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row footer">
-        <div>
+        <div style="flex-basis: 30%;">
             <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
             <h1>SMK Sains Pertiwi</h1>
-            <p>Jl. Raya Pertiwi No.1, Cawang, Kec. Kramat Jati,<br>Jakarta Timur, DKI Jakarta</p>
-            <p>Telp. (021) 788888</p>
+            <p>Jl. Raya Pertiwi No.1, Cawang, Kec. Kramat Jati, Jakarta Timur, DKI Jakarta</p>
+            <p style="margin-bottom: 0px;">Telp. (021) 788888</p>
             <p>Email: <a href="mailto:inbox@smksainspertiwi.ac.id" class="footerlink">inbox@smksainspertiwi.ac.id</a>
             </p>
         </div>
