--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="row block-dark cta-block">
+            <div class="cta-fill"><h2>Pendaftaran Peserta Didik Baru Segera Dibuka</h2></div>
+            <div class="cta-fill"><button class="button button-white">Lihat Informasi PPDB</button></div>
+        </div>
+    </div>
     <div class="row footer">
         <div style="flex-basis: 30%;">
             <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
