--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <body>
     <div class="header-container">
         <header class="header">
-            <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px" class="logo">
-            <h1 class="title">SMK Sains Pertiwi</h1>
+            <a href="index.html"><img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px"
+                    class="logo">
+                <h1 class="title" style="color: white;">SMK Sains Pertiwi</h1>
+            </a>
             <!-- Hamburger icon -->
             <input class="side-menu" type="checkbox" id="side-menu" />
             <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
@@ -27,76 +29,77 @@
                     <li class="dropdown">
                         <a href="#" class="dropbtn"><b>Profil</b></a>
                         <div class="dropdown-content">
-                            <a href="#">Sejarah</a>
-                            <a href="#">Visi Misi</a>
-                            <a href="#">Tugas & Fungsi</a>
-                            <a href="#">Profil Pimpinan</a>
-                            <a href="#">Peta Sekolah</a>
+                            <a href="profil.html#sejarah">Sejarah</a>
+                            <a href="profil.html#visimisi">Visi Misi</a>
+                            <a href="profil.html#tugasfungsi">Tugas & Fungsi</a>
+                            <a href="profil.html#pendidik">Tenaga Pendidik</a>
+                            <a href="profil.html#peta">Peta Sekolah</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn"><b>Program Sekolah</b></a>
                         <div class="dropdown-content">
-                            <a href="#">Program Kerja</a>
-                            <a href="#">Hubungan Industri</a>
-                            <a href="#">Program Inovasi</a>
-                            <a href="#">Program Bussiness Center</a>
+                            <a href="program.html#proker">Program Kerja</a>
+                            <a href="program.html#hubind">Hubungan Industri</a>
+                            <a href="program.html#inovasi">Program Inovasi</a>
+                            <a href="program.html#bussiness">Program Bussiness Center</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn"><b>Program Keahlian</b></a>
                         <div class="dropdown-content">
-                            <a href="#">Rekayasa Perangkat Lunak</a>
-                            <a href="#">Teknik Elektronika Industri</a>
-                            <a href="#">Teknik Mesin</a>
-                            <a href="#">Sistem Informasi</a>
-                            <a href="#">Teknik Otomasi Industri</a>
-                            <a href="#">Teknik Pendingin & Tata Udara</a>
-                            <a href="#">Teknik Mekatronika</a>
-                            <a href="#">Produksi Film & Program Televisi</a>
+                            <a href="keahlian.html#rpl">Rekayasa Perangkat Lunak</a>
+                            <a href="keahlian.html#elektronika">Teknik Elektronika Industri</a>
+                            <a href="keahlian.html#mesin">Teknik Mesin</a>
+                            <a href="keahlian.html#si">Sistem Informasi</a>
+                            <a href="keahlian.html#otomasi">Teknik Otomasi Industri</a>
+                            <a href="keahlian.html#ac">Teknik Pendingin & Tata Udara</a>
+                            <a href="keahlian.html#mekatronika">Teknik Mekatronika</a>
+                            <a href="keahlian.html#film">Produksi Film & Program Televisi</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn"><b>Kegiatan Sekolah</b></a>
                         <div class="dropdown-content">
-                            <a href="#">Kalender Akademik</a>
-                            <a href="#">Bursa Kerja</a>
-                            <a href="#">PPDB</a>
-                            <a href="#">Sistem Informasi</a>
-                            <a href="#">Ekstrakulikuler</a>
-                            <a href="#">Laporan Kegiatan Sekolah</a>
+                            <a href="kegiatan.html#kalender">Kalender Akademik</a>
+                            <a href="kegiatan.html#bursa">Bursa Kerja</a>
+                            <a href="kegiatan.html#ppdb">PPDB</a>
+                            <a href="kegiatan.html#si">Sistem Informasi</a>
+                            <a href="kegiatan.html#ekstra">Ekstrakulikuler</a>
+                            <a href="kegiatan.html#laporan">Laporan Kegiatan Sekolah</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn"><b>Berita</b></a>
                         <div class="dropdown-content">
-                            <a href="#">Berita Sekolah</a>
-                            <a href="#">Berita Pendidikan</a>
+                            <a href="berita.html#sekolah">Berita Sekolah</a>
+                            <a href="berita.html#pendidikan">Berita Pendidikan</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn"><b>Galeri</b></a>
                         <div class="dropdown-content">
-                            <a href="#">Galeri Foto</a>
-                            <a href="#">Galeri Video</a>
+                            <a href="galeri.html#foto">Galeri Foto</a>
+                            <a href="galeri.html#video">Galeri Video</a>
                         </div>
                     </li>
-                    <li class="dropdown"><a href="#" class="dropbtn"><b>Kontak</b></a></li>
-                    <li class="dropdown ppdb-mobile"><a href="#" class="dropbtn"><b>PPDB</b></a></li>
-                    <li><button class="button button-header dropbtn">PPDB</button></li>
+                    <li class="dropdown"><a href="kontak.html" class="dropbtn"><b>Kontak</b></a></li>
+                    <li class="dropdown ppdb-mobile"><a href="kegiatan.html#ppdb" class="dropbtn"><b>PPDB</b></a></li>
+                    <li><button class="button button-header dropbtn"
+                            onclick="location.href='kegiatan.html#ppdb';">PPDB</button></li>
                 </ul>
             </nav>
         </header>
     </div>
-    <div class="row hero">
+    <div class="row hero hero-front white">
         <div>
             <div class="under-header">
-                <h2>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 segera dibuka.</h2>
+                <h1>Penerimaan Siswa Baru Tahun Ajaran 2022/2023 segera dibuka.</h1>
                 <p>
                     Daftar di 8 pilihan program keahlian dengan kurikulum nasional.
                     Dapatkan kesempatan untuk mengikuti program keahlian yang sesuai dengan karakteristikmu.
                 </p>
-                <button class="button">Lihat Informasi PPDB <i class="fa-solid fa-circle-arrow-right"></i></button>
+                <button class="button" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB <i class="fa-solid fa-circle-arrow-right"></i></button>
             </div>
         </div>
     </div>
@@ -118,23 +121,24 @@
                 <li><b>14-28 Februari 2022</b> : Pendaftaran SNMPTN</li>
                 <li><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
                 <br>
-                <li><a href="#"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
+                <li><a href="kegiatan.html#kalender"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
         <div style="flex-basis: 40%;">
             <h2 class="underlined head2" style="text-align:left">Berita</h2>
             <ul style="text-align:left; list-style-type: circle; padding-left: 15px;">
-                <li><a href="#">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
-                <li><a href="#">Kunjungan SMKN 2 Jambi</a></li>
-                <li><a href="#">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a>
+                <li><a href="berita.html">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
+                <li><a href="berita.html">Kunjungan SMKN 2 Jambi</a></li>
+                <li><a href="berita.html">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a>
                 </li>
-                <li><a href="#">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</a>
+                <li><a href="berita.html">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</a>
                 </li>
-                <li><a href="#">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</a></li>
-                <li><a href="#">Kunjungan SMKN 1 Sorong Papua</a></li>
-                <li><a href="#">“CAREER DAY” SMK Sains Pertiwi</a></li>
+                <li><a href="berita.html">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</a></li>
+                <li><a href="berita.html">Kunjungan SMKN 1 Sorong Papua</a></li>
+                <li><a href="berita.html">“CAREER DAY” SMK Sains Pertiwi</a></li>
                 <br>
-                <li style="list-style-type:none; margin-left: -20px;"><a href="#"><b>Lihat semua berita SMK Sains Pertiwi <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
+                <li style="list-style-type:none; margin-left: -20px;"><a href="berita.html"><b>Lihat semua berita SMK Sains
+                            Pertiwi <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
     </div>
@@ -232,41 +236,42 @@
             <p class="under-header">Tenaga pedidik SMK Sains Pertiwi
                 berkualitas dan berkompetensi nasional dan internasional.
                 Perekrutan melalui seleksi yang ketat. Semua itu sebagai persiapan
-                agar peserta didik SMK Sains Pertiwi yang masih usia remaja tidak terbawa arus, dan lebih mampu berpikir, bertindak,
+                agar peserta didik SMK Sains Pertiwi yang masih usia remaja tidak terbawa arus, dan lebih mampu
+                berpikir, bertindak,
                 serta menentukan keputusan yang tepat</p>
             <div class="row">
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0774103.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Dr. Stefie Rahmawati</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Kepala Sekolah</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0217531.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Putra Rahmawan, M.Pd</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Akademik</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0230412.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Andreas Himawan, M.Pd</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Non-Akademik</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0998714.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Karina Stephanie, M.Pd</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Wakil Kepala Sekolah Bidang Kesiswaan</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0719025.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Nisa Maulia, M.Si</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Bimbingan Konseling / Penasihat Akademik</p>
                 </div>
             </div>
-            <a href="#"><b>Lihat semua tenaga pendidik <i class="fa-solid fa-circle-arrow-right"></i></b></a>
+            <a href="profil.html#pendidik"><b>Lihat semua tenaga pendidik <i class="fa-solid fa-circle-arrow-right"></i></b></a>
         </div>
     </div>
     <div class="row section-light">
@@ -294,7 +299,8 @@
     <div class="row section-light" style="padding-bottom: 0px;">
         <div>
             <h2 class="underlined head2">Mitra SMK Sains Pertiwi</h2>
-            <p class="under-header">Lulusan SMK Sains Pertiwi berpeluang untuk bekerja pada perusahaan yang menjadi mitra SMK Sains Pertiwi</p>
+            <p class="under-header">Lulusan SMK Sains Pertiwi berpeluang untuk bekerja pada perusahaan yang menjadi
+                mitra SMK Sains Pertiwi</p>
         </div>
     </div>
     <div class="row section-light" style="padding-top: 0px; flex-direction: row;">
@@ -319,19 +325,19 @@
         <div>
             <h2 class="underlined head2">Profil Alumni</h2>
             <div class="row">
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0103428.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Lisa Turnip</h4>
                     <p style="text-align: center; margin-bottom: 0px;">CEO Beauty Box</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0049704.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Indra Hadiyanto</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Software Engineer Macrohard</p>
                 </div>
-                <div class="block-light" style="flex-basis: 15%;">
+                <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0467544.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
                     <h4 style="text-align: center;">Adriana Ginanjar</h4>
@@ -342,8 +348,10 @@
     </div>
     <div class="row">
         <div class="row block-dark cta-block">
-            <div class="cta-fill"><h2>Pendaftaran Peserta Didik Baru Segera Dibuka</h2></div>
-            <div class="cta-fill"><button class="button button-white">Lihat Informasi PPDB</button></div>
+            <div class="cta-fill">
+                <h2>Pendaftaran Peserta Didik Baru Segera Dibuka</h2>
+            </div>
+            <div class="cta-fill"><button class="button button-white" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB</button></div>
         </div>
     </div>
     <div class="row footer">
@@ -358,21 +366,25 @@
         <div>
             <h2>Navigasi</h2>
             <ul>
-                <li><a href="#" class="footerlink">Home</a></li>
-                <li><a href="#" class="footerlink">Profil</a></li>
-                <li><a href="#" class="footerlink">Program Sekolah</a></li>
-                <li><a href="#" class="footerlink">Program Keahlian</a></li>
-                <li><a href="#" class="footerlink">Kegiatan Sekolah</a></li>
-                <li><a href="#" class="footerlink">Berita</a></li>
-                <li><a href="#" class="footerlink">Galeri</a></li>
+                <li><a href="index.html" class="footerlink">Home</a></li>
+                <li><a href="profil.html" class="footerlink">Profil</a></li>
+                <li><a href="program.html" class="footerlink">Program Sekolah</a></li>
+                <li><a href="keahlian.html" class="footerlink">Program Keahlian</a></li>
+                <li><a href="kegiatan.html" class="footerlink">Kegiatan Sekolah</a></li>
+                <li><a href="berita.html" class="footerlink">Berita</a></li>
+                <li><a href="galeri.html" class="footerlink">Galeri</a></li>
+                <li><a href="kontak.html" class="footerlink">Kontak</a></li>
             </ul>
         </div>
         <div>
             <h2>Social Media</h2>
             <ul>
-                <li><a href="#" class="footerlink"><i class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
-                <li><a href="#" class="footerlink"><i class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
-                <li><a href="#" class="footerlink"><i class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
+                <li><a href="https://facebook.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
+                <li><a href="https://instagram.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
+                <li><a href="https://twitter.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
             </ul>
         </div>
     </div>
