--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="block-transparent" style="flex-basis: 15%;">
                     <img src="img/v3_0774103.png" alt="" width="150px"
                         style="display: block; margin:auto; margin-bottom: 8px;">
-                    <h4 style="text-align: center;">Dr. Stefie Rahmawati</h4>
+                    <h4 style="text-align: center;">Stefie Rahmawati, M.Pd, MM</h4>
                     <p style="text-align: center; margin-bottom: 0px;">Kepala Sekolah</p>
                 </div>
                 <div class="block-transparent" style="flex-basis: 15%;">
@@ -349,7 +349,7 @@
     <div class="row">
         <div class="row block-dark cta-block">
             <div class="cta-fill">
-                <h2>Pendaftaran Peserta Didik Baru Segera Dibuka</h2>
+                <h2>Pendaftaran Peserta Didik Baru segera dibuka</h2>
             </div>
             <div class="cta-fill"><button class="button button-white" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB</button></div>
         </div>
