--- a/galeri.html
+++ b/galeri.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMK Sains Pertiwi - Home</title>
+    <title>Galeri - SMK Sains Pertiwi</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -87,6 +87,75 @@
                 </ul>
             </nav>
         </header>
+    </div>
+    <div class="row first-row">
+        <div style="flex-basis: 100%;">
+            <h1>Galeri</h1>
+        </div>
+        <div style="flex-basis: 100%;">
+            <h2 class="underlined head2" id="foto">Galeri Foto</h2>
+            <div class="row" style="padding-left: 0; padding-right: 0;">
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-lukas-574069.jpg" alt="" class="img-box">
+                    <h3>Ayo Dukung Siswa Kita di Program Microsoft Young Developer</h3>
+                    <p style="margin-bottom: 0px;">Program Microsoft Young Developers
+                        Conference (WSP) di Microsoft Campus akan diselenggarakan pada 2-4 Juli 2022. Dukung siswa kita,
+                        Ismail Putra (Sistem Informasi Kelas 11B) dan Andreas Lukito (RPL Kelas 12A) pada event
+                        tersebut.</p>
+                </div>
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-matheus-bertelli-2608517.jpg" alt="" class="img-box">
+                    <h3>Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</h3>
+                    <p style="margin-bottom: 0px;">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK
+                        Sains Pertiwi pada 3-4 Maret 2022. Dihadiri oleh 24 kelompok terbaik dari berbagai siswa kelas
+                        SMK Sains Pertiwi.</p>
+                </div>
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-rodnae-productions-7648319.jpg" alt="" class="img-box">
+                    <h3>Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</h3>
+                    <p style="margin-bottom: 0px;">Ibu Karina Stephanie (Guru Matematika / Wakil Kepala Sekolah Bidang
+                        Kesiswaan) meraih peringkat 2 pada Program Penilaian Guru Dedikasi dan Inovasi SMK tingkat
+                        Nasional tahun 2022.</p>
+                </div>
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-pavel-danilyuk-7234414.jpg" alt="" class="img-box">
+                    <h3>“CAREER DAY” SMK Sains Pertiwi</h3>
+                    <p style="margin-bottom: 0px;">Pada 15 Januari 2022, SMK Sains Pertiwi mengadakan “CAREER DAY”.
+                        Sekolah menghadirkan pembicara Lisa Turnip (CEO Beauty Box) dan Indra Hadiyanto (Software
+                        Engineer Macrohard).</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div>
+            <h2 class="underlined head2" id="video">Galeri Video</h2>
+            <div class="row" style="padding-left: 0; padding-right: 0;">
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-christina-morillo-1181346.jpg" alt="" class="img-box">
+                    <h3>Kunjungan SMKN 2 Jambi</h3>
+                    <p style="margin-bottom: 0px;">SMKN 2 Jambi melakukan kunjungan ke SMK Sains Pertiwi pada 14 Maret
+                        2022. Rombongan melihat
+                        program keahlian Rekayasa Perangkat Lunak pada SMK Sains Pertiwi.</p>
+                </div>
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-matheus-bertelli-2608517.jpg" alt="" class="img-box">
+                    <h3>Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</h3>
+                    <p style="margin-bottom: 0px;">Dinas Pendidikan Menengah Provinsi DKI Jakarta akan mengadakan
+                        Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha pada 12 April 2022.
+                        Pendaftaran peserta dapat menghubungi Ibu Lina (Bagian Administrasi).</p>
+                </div>
+                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
+                    <img src="img/pexels-pixabay-256395.jpg" alt="" class="img-box">
+                    <h3>Kunjungan SMKN 1 Sorong Papua</h3>
+                    <p style="margin-bottom: 0px;">Kepala Sekolah beserta guru dari SMKN 1 Sorong Papua melakukan
+                        kunjungan ke SMK Sains Pertiwi pada 20 Desember 2021.</p>
+                </div>
+                <div style="flex-basis: 40%; text-align: left;">
+                    
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row footer">
         <div style="flex-basis: 30%;">
