fix header background image

--- a/kontak.html
+++ b/kontak.html
@@ -92,7 +92,7 @@
         </header>
     </div>
     <div class="row first-row" style="background: linear-gradient(to top, #030111, #ffffff00),
-    url(../img/pexels-pixabay-207691.jpg) no-repeat center center;">
+    url(img/pexels-pixabay-207691.jpg) no-repeat center center;">
         <div style="flex-basis: 100%;">
             <h1 class="white">Kontak Kami</h1>
         </div>
