--- a/keahlian.html
+++ b/keahlian.html
@@ -89,7 +89,7 @@
         </header>
     </div>
     <div class="row first-row" style="background: linear-gradient(to top, #030111, #ffffff00),
-    url(../img/pexels-idriss-meliani-2982449.jpg) no-repeat center center;">
+    url(img/pexels-idriss-meliani-2982449.jpg) no-repeat center center;">
         <div style="flex-basis: 100%;">
             <h1 class="white">Program Keahlian SMK Sains Pertiwi</h1>
         </div>
