--- a/kontak.html
+++ b/kontak.html
@@ -27,7 +27,7 @@
             <nav class="nav">
                 <ul class="menu">
                     <li class="dropdown">
-                        <a href="#" class="dropbtn"><b>Profil</b></a>
+                        <a href="#menu" class="dropbtn"><b>Profil</b></a>
                         <div class="dropdown-content">
                             <a href="profil.html#sejarah">Sejarah</a>
                             <a href="profil.html#visimisi">Visi Misi</a>
@@ -37,7 +37,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn"><b>Program Sekolah</b></a>
+                        <a href="#menu" class="dropbtn"><b>Program Sekolah</b></a>
                         <div class="dropdown-content">
                             <a href="program.html#proker">Program Kerja</a>
                             <a href="program.html#hubind">Hubungan Industri</a>
@@ -46,7 +46,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn"><b>Program Keahlian</b></a>
+                        <a href="#menu" class="dropbtn"><b>Program Keahlian</b></a>
                         <div class="dropdown-content">
                             <a href="keahlian.html#rpl">Rekayasa Perangkat Lunak</a>
                             <a href="keahlian.html#elektronika">Teknik Elektronika Industri</a>
@@ -59,7 +59,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn"><b>Kegiatan Sekolah</b></a>
+                        <a href="#menu" class="dropbtn"><b>Kegiatan Sekolah</b></a>
                         <div class="dropdown-content">
                             <a href="kegiatan.html#kalender">Kalender Akademik</a>
                             <a href="kegiatan.html#bursa">Bursa Kerja</a>
@@ -70,14 +70,14 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn"><b>Berita</b></a>
+                        <a href="#menu" class="dropbtn"><b>Berita</b></a>
                         <div class="dropdown-content">
                             <a href="berita.html#sekolah">Berita Sekolah</a>
                             <a href="berita.html#pendidikan">Berita Pendidikan</a>
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn"><b>Galeri</b></a>
+                        <a href="#menu" class="dropbtn"><b>Galeri</b></a>
                         <div class="dropdown-content">
                             <a href="galeri.html#foto">Galeri Foto</a>
                             <a href="galeri.html#video">Galeri Video</a>
