--- a/profil.html
+++ b/profil.html
@@ -103,7 +103,7 @@
             <h2 class="underlined head2">Sejarah</h2>
         </div>
         <div style="flex-basis: 30%;">
-            <img src="/img/pexels-idriss-meliani-2982449.jpg" alt="" style="max-width: 100%;">
+            <img src="img/pexels-idriss-meliani-2982449.jpg" alt="" style="max-width: 100%;">
         </div>
         <div style="flex-basis: 60%;">
             <p style="text-align: left;">SMK Sains Pertiwi merupakan salah satu Lembaga
@@ -127,13 +127,13 @@
             <span id="visimisi" style="position: relative; top: -100px;"></span>
             <h2 class="underlined head2">Visi - Misi</h2>
         </div>
-        <div class="block-dark" style="flex-basis: 25%; padding: 30px; margin-bottom: 20px;">
+        <div class="block-dark" style="flex-basis: 35%; padding: 30px; align-self: flex-start;">
             <h2 class="underlined left-text">Visi</h2>
             <p style="text-align: left;">Terwujudnya sekolah dengan lulusan yang unggul dan berakhlaq mulia,
                 berbudaya
                 kerja, berjiwa technopreuneurship serta berwawasan global sesuai tuntutan industri dan masyarakat.</p>
         </div>
-        <div class="block-dark" style="flex-basis: 35%; padding: 30px;">
+        <div class="block-dark" style="flex-basis: 45%; padding: 30px; align-self: flex-start;">
             <h2 class="underlined left-text">Misi</h2>
             <ul style="padding-left: 15px; list-style-type: disc; text-align: left;">
                 <li>Menghasilkan peserta didik yang unggul, beriman dan bertakwa kepada Tuhan Yang Maha Esa, berakhlak
@@ -150,7 +150,7 @@
             </ul>
         </div>
     </div>
-    <div class="row row-spaced section-mid ornament-up">
+    <div class="row section-mid ornament-up">
         <div style="flex-basis: 100%;">
             <span id="tugasfungsi" style="position: relative; top: -100px;"></span>
             <h2 class="underlined">Tugas & Fungsi</h2>
@@ -203,6 +203,66 @@
                     style="display: block; margin:auto; margin-bottom: 8px;">
                 <h4 style="text-align: center;">Nisa Maulia, M.Si</h4>
                 <p style="text-align: center; margin-bottom: 0px;">Bimbingan Konseling / Penasihat Akademik</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0647005_0380707_0434081.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0125446.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0215251.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0089949.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0409509.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0324649.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0881882.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0066829.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0467002.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+            </div>
+            <div class="block-transparent" style="flex-basis: 15%;">
+                <img src="img/v3_0874619.png" alt="" width="150px"
+                    style="display: block; margin:auto; margin-bottom: 8px;">
+                <h4 style="text-align: center;">NN</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
             </div>
         </div>
     </div>
