--- a/galeri.html
+++ b/galeri.html
@@ -16,8 +16,10 @@
 <body>
     <div class="header-container">
         <header class="header">
-            <a href="index.html"><img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px" class="logo">
-            <h1 class="title" style="color: white;">SMK Sains Pertiwi</h1></a>
+            <a href="index.html"><img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="40px"
+                    class="logo">
+                <h1 class="title" style="color: white;">SMK Sains Pertiwi</h1>
+            </a>
             <!-- Hamburger icon -->
             <input class="side-menu" type="checkbox" id="side-menu" />
             <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
@@ -83,7 +85,8 @@
                     </li>
                     <li class="dropdown"><a href="kontak.html" class="dropbtn"><b>Kontak</b></a></li>
                     <li class="dropdown ppdb-mobile"><a href="kegiatan.html#ppdb" class="dropbtn"><b>PPDB</b></a></li>
-                    <li><button class="button button-header dropbtn" onclick="location.href='kegiatan.html#ppdb';">PPDB</button></li>
+                    <li><button class="button button-header dropbtn"
+                            onclick="location.href='kegiatan.html#ppdb';">PPDB</button></li>
                 </ul>
             </nav>
         </header>
@@ -93,69 +96,112 @@
             <h1>Galeri</h1>
         </div>
         <div style="flex-basis: 100%;">
-            <h2 class="underlined head2" id="foto">Galeri Foto</h2>
+            <span id="foto" style="position: relative; top: -100px;"></span>
+            <h2 class="underlined head2">Galeri Foto</h2>
             <div class="row" style="padding-left: 0; padding-right: 0;">
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-lukas-574069.jpg" alt="" class="img-box">
-                    <h3>Ayo Dukung Siswa Kita di Program Microsoft Young Developer</h3>
-                    <p style="margin-bottom: 0px;">Program Microsoft Young Developers
-                        Conference (WSP) di Microsoft Campus akan diselenggarakan pada 2-4 Juli 2022. Dukung siswa kita,
-                        Ismail Putra (Sistem Informasi Kelas 11B) dan Andreas Lukito (RPL Kelas 12A) pada event
-                        tersebut.</p>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img1"><img src="img/pexels-idriss-meliani-2982449.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Gedung SMK Sains Pertiwi</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img1">
+                        <span style="background-image: url('img/pexels-idriss-meliani-2982449.jpg')"></span>
+                    </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-matheus-bertelli-2608517.jpg" alt="" class="img-box">
-                    <h3>Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</h3>
-                    <p style="margin-bottom: 0px;">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK
-                        Sains Pertiwi pada 3-4 Maret 2022. Dihadiri oleh 24 kelompok terbaik dari berbagai siswa kelas
-                        SMK Sains Pertiwi.</p>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img2"><img src="img/pexels-pixabay-256395.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Ruang Kelas</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img2">
+                        <span style="background-image: url('img/pexels-pixabay-256395.jpg')"></span>
+                    </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-rodnae-productions-7648319.jpg" alt="" class="img-box">
-                    <h3>Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</h3>
-                    <p style="margin-bottom: 0px;">Ibu Karina Stephanie (Guru Matematika / Wakil Kepala Sekolah Bidang
-                        Kesiswaan) meraih peringkat 2 pada Program Penilaian Guru Dedikasi dan Inovasi SMK tingkat
-                        Nasional tahun 2022.</p>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img3"><img src="img/pexels-pixabay-207691.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Ruang Aula 1</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img3">
+                        <span style="background-image: url('img/pexels-pixabay-207691.jpg')"></span>
+                    </a>
                 </div>
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-pavel-danilyuk-7234414.jpg" alt="" class="img-box">
-                    <h3>“CAREER DAY” SMK Sains Pertiwi</h3>
-                    <p style="margin-bottom: 0px;">Pada 15 Januari 2022, SMK Sains Pertiwi mengadakan “CAREER DAY”.
-                        Sekolah menghadirkan pembicara Lisa Turnip (CEO Beauty Box) dan Indra Hadiyanto (Software
-                        Engineer Macrohard).</p>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img4"><img src="img/pexels-katerina-holmes-5905445.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Ruang Kelas</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img4">
+                        <span style="background-image: url('img/pexels-katerina-holmes-5905445.jpg')"></span>
+                    </a>
+                </div>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img5"><img src="img/pexels-pavel-danilyuk-7234414.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Ruang Multimedia</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img5">
+                        <span style="background-image: url('img/pexels-pavel-danilyuk-7234414.jpg')"></span>
+                    </a>
+                </div>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img6"><img src="img/pexels-kindel-media-8688143.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Kolam Renang</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img6">
+                        <span style="background-image: url('img/pexels-kindel-media-8688143.jpg')"></span>
+                    </a>
+                </div>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img7"><img src="img/pexels-maria-orlova-4946389.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Indoor Sports Hall</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img7">
+                        <span style="background-image: url('img/pexels-maria-orlova-4946389.jpg')"></span>
+                    </a>
+                </div>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img8"><img src="img/pexels-pixabay-267507.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Computer Lab</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img8">
+                        <span style="background-image: url('img/pexels-pixabay-267507.jpg')"></span>
+                    </a>
+                </div>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img9"><img src="img/pexels-element-digital-1370296.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Perpustakaan</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img9">
+                        <span style="background-image: url('img/pexels-element-digital-1370296.jpg')"></span>
+                    </a>
+                </div>
+                <div class="block-transparent" style="flex-basis: 20%; text-align: left;">
+                    <a href="#img10"><img src="img/pexels-maggie-zhan-2170498.jpg" alt="" class="img-box">
+                        <p style="margin-bottom: 0px; text-align: center;">Gedung Utama</p>
+                    </a>
+                    <a href="#" class="lightbox" id="img10">
+                        <span style="background-image: url('img/pexels-maggie-zhan-2170498.jpg')"></span>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
         <div>
-            <h2 class="underlined head2" id="video">Galeri Video</h2>
+            <span id="video" style="position: relative; top: -100px;"></span>
+            <h2 class="underlined head2">Galeri Video</h2>
             <div class="row" style="padding-left: 0; padding-right: 0;">
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-christina-morillo-1181346.jpg" alt="" class="img-box">
-                    <h3>Kunjungan SMKN 2 Jambi</h3>
-                    <p style="margin-bottom: 0px;">SMKN 2 Jambi melakukan kunjungan ke SMK Sains Pertiwi pada 14 Maret
-                        2022. Rombongan melihat
-                        program keahlian Rekayasa Perangkat Lunak pada SMK Sains Pertiwi.</p>
+                <div>
+                    <iframe width="100%" src="https://www.youtube.com/embed/erjAlnGV5L8"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-matheus-bertelli-2608517.jpg" alt="" class="img-box">
-                    <h3>Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</h3>
-                    <p style="margin-bottom: 0px;">Dinas Pendidikan Menengah Provinsi DKI Jakarta akan mengadakan
-                        Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha pada 12 April 2022.
-                        Pendaftaran peserta dapat menghubungi Ibu Lina (Bagian Administrasi).</p>
-                </div>
-                <div class="block-transparent" style="flex-basis: 40%; text-align: left;">
-                    <img src="img/pexels-pixabay-256395.jpg" alt="" class="img-box">
-                    <h3>Kunjungan SMKN 1 Sorong Papua</h3>
-                    <p style="margin-bottom: 0px;">Kepala Sekolah beserta guru dari SMKN 1 Sorong Papua melakukan
-                        kunjungan ke SMK Sains Pertiwi pada 20 Desember 2021.</p>
-                </div>
-                <div style="flex-basis: 40%; text-align: left;">
-                    
+                <div>
+                    <iframe width="100%" src="https://www.youtube.com/embed/lkvwuBRxuzs"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
+
     </div>
     <div class="row footer">
         <div style="flex-basis: 30%;">
@@ -182,9 +228,12 @@
         <div>
             <h2>Social Media</h2>
             <ul>
-                <li><a href="https://facebook.com" class="footerlink" target="_blank"><i class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
-                <li><a href="https://instagram.com" class="footerlink" target="_blank"><i class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
-                <li><a href="https://twitter.com" class="footerlink" target="_blank"><i class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
+                <li><a href="https://facebook.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-facebook"></i> SMK Sains Pertiwi</a></li>
+                <li><a href="https://instagram.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-instagram"></i> @sains_pertiwi</a></li>
+                <li><a href="https://twitter.com" class="footerlink" target="_blank"><i
+                            class="fa-brands fa-twitter"></i> @sains_pertiwi</a></li>
             </ul>
         </div>
     </div>
