--- a/profil.html
+++ b/profil.html
@@ -207,62 +207,62 @@
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0647005_0380707_0434081.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Amelia Putri, S.Pd</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Bahasa Inggris</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0125446.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Firdaus Santoso, M.T.</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Dasar Pemrograman</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0215251.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Kamaludin Yusuf, M.Kom</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru PTIK</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0089949.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Gerrard Wijaya, M.Eng</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Sistem Basis Data</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0409509.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Willy Nurrahman, ST, MMSI</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Aplikasi Basis Data</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0324649.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Robby Adinata Kusuma, S.Kom, MT</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Sistem Basis Data</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0881882.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Yulia Agnesia, S.Kom</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Metode Perancangan Program</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0066829.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Ade Bagas Kurniawanto, M.T.</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Struktur Data</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0467002.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">Neneng Kumalasari, M.Kom</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Kalkulus</p>
             </div>
             <div class="block-transparent" style="flex-basis: 15%;">
                 <img src="img/v3_0874619.png" alt="" width="150px"
                     style="display: block; margin:auto; margin-bottom: 8px;">
-                <h4 style="text-align: center;">NN</h4>
-                <p style="text-align: center; margin-bottom: 0px;">Guru _</p>
+                <h4 style="text-align: center;">M. Abdul Jabbar, S.Kom</h4>
+                <p style="text-align: center; margin-bottom: 0px;">Guru Teknik Digital</p>
             </div>
         </div>
     </div>
